Thu Aug 23 12:33:35 UTC 2012  johnny  <johnny@>

        * ace/Condition_Attributes.inl:
        * ace/config-hpux-11.00.h:
          Another fix for hpux ia64 v3

Thu Aug 23 06:35:20 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Condition_Attributes.inl:
          Only check for ACE_LACKS_MONOTONIC_TIME

        * ace/Monotonic_Time_Policy.inl:
          Layout change

        * ace/config-hpux-11.00.h:
          Added ACE_LACKS_MONOTONIC_TIME

Wed Aug 22 11:50:22 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-win32-common.h:
          Added ACE_LACKS_CLOCK_MONOTONIC and
          ACE_LACKS_CLOCK_REALTIME

Wed Aug 22 06:13:12 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/os_include/sys/os_time.h:
          Fixed incorrect check in this file

Tue Aug 21 16:55:13 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/os_include/sys/os_time.h:
          Introduced new ACE_LACKS_CLOCKID_T which is used to determine whether
          we need to define clockid_t in ACE. Moved CLOCK_MONOTONIC and
          CLOCK_REALTIME to file below

        * ace/os_include/sys/os_types.h:
          Added CLOCK_MONOTONIC and CLOCK_REALTIME here and introduced new
          ACE_LACKS_CLOCK_REALTIME and ACE_LACKS_CLOCK_MONOTONIC because on
          for example HPUX CLOCK_REALTIME is not a define but part of an enum

        * ace/config-win32-common.h:
          Added ACE_LACKS_CLOCKID_T

Tue Aug 21 14:38:00 UTC 2012  Simon Massey  <simon dot massey at prismtech dot com>

        * protocols/ace/INet/SSL_CallbackManager.h:
          Spelling in comment.

Tue Aug 21 12:25:45 UTC 2012  Simon Massey  <simon dot massey at prismtech dot com>

        * ace/SSL/SSL_Context.h:
        * ace/SSL/SSL_Context.inl:

          Solaris studio compilers amongst others were issuing warnings due to an
          incorrect type of function pointer (i.e. not extern "C", but standard